Add styling for inline code blocks
Also clean up formatting a bit

--- a/ui/chatArea/innerStyle.css
+++ b/ui/chatArea/innerStyle.css
@@ -32,7 +32,14 @@ div.alert_name {
 }
 
 a {
-    color: blue;
+  color: blue;
 }
 
-del { text-decoration: line-through; }
+del {
+  text-decoration: line-through;
+}
+
+code {
+  padding: 2px;
+  background-color: #eee;
+}
